--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   ml-api:
-    image: ghcr.io/OWNER/REPO:latest
+    image: ghcr.io/Kwannn666/ml-cicd-demo:latest
     container_name: ml-api
     restart: unless-stopped
     ports:
