--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write   
     steps:
       - uses: actions/checkout@v4
 
@@ -26,8 +29,7 @@ jobs:
 
       - name: Train & Log to MLflow
         env:
-          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
-          MLFLOW_EXPERIMENT: demo
+          
           DATA_CSV: data/train.csv
           TARGET: target
         run: python train.py
@@ -38,37 +40,17 @@ jobs:
           name: model-artifacts
           path: artifacts/
 
-      - name: Download artifacts to workspace
-        uses: actions/download-artifact@v4
-        with:
-          name: model-artifacts
-          path: artifacts/
-
-      - name: Login to GHCR
-        if: ${{ secrets.GHCR_TOKEN != '' }}
+      - name: Login to GHCR (use GITHUB_TOKEN)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push Image
-        if: ${{ secrets.GHCR_TOKEN != '' }}
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
-
-      - name: Deploy via SSH to VPS
-        if: ${{ secrets.VPS_HOST != '' && secrets.VPS_USER != '' && secrets.VPS_SSH_KEY != '' && secrets.GHCR_TOKEN != '' }}
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GHCR_TOKEN }}
-            docker pull ghcr.io/${{ github.repository }}:latest
-            docker compose -f ~/ml-cicd/docker-compose.prod.yml up -d
