--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,8 +40,13 @@ jobs:
           name: model-artifacts
           path: artifacts/
 
-      - name: Set lowercase repo
-        run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+      - name: Set lowercase owner/repo
+        shell: bash
+        run: |
+          echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+          echo "REPO_NAME=${GITHUB_REPOSITORY#*/}"   >> $GITHUB_ENV
+          echo "TAG=ghcr.io/${OWNER_LC}/${REPO_NAME}:latest" >> $GITHUB_ENV
+          echo "Using TAG=$TAG"
 
       - name: Login to GHCR (use GITHUB_TOKEN)
         uses: docker/login-action@v3
@@ -56,7 +61,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ghcr.io/${{ env.REPO_LC }}:latest
+          tags: ${{ env.TAG }}
 
       - name: Login to GHCR (use GITHUB_TOKEN)
         uses: docker/login-action@v3
