--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,14 +40,6 @@ jobs:
           name: model-artifacts
           path: artifacts/
 
-      - name: Set lowercase owner/repo
-        shell: bash
-        run: |
-          echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
-          echo "REPO_NAME=${GITHUB_REPOSITORY#*/}"   >> $GITHUB_ENV
-          echo "TAG=ghcr.io/${OWNER_LC}/${REPO_NAME}:latest" >> $GITHUB_ENV
-          echo "Using TAG=$TAG"
-
       - name: Login to GHCR (use GITHUB_TOKEN)
         uses: docker/login-action@v3
         with:
@@ -61,7 +53,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ env.TAG }}
+          tags: ghcr.io/${{ toLower(github.repository) }}:latest
 
       - name: Login to GHCR (use GITHUB_TOKEN)
         uses: docker/login-action@v3
